dabbling with universal deeplink

--- a/redirection.html
+++ b/redirection.html
@@ -98,9 +98,9 @@
     }
   };
 
-  // if (!isMobile.any()) {
-  //   window.location.replace(myCPHref);
-  // } else if (isMobile.iOS()) {
+  if (!isMobile.any()) {
+    window.location.replace(myCPHref);
+  } else if (isMobile.iOS()) {
     var iosActionElem = document.querySelector('#ios-action');
     var installAppElem = iosActionElem.querySelector('#install-app');
     var openAppElem = iosActionElem.querySelector('#open-app');
@@ -109,15 +109,14 @@
     openAppElem.href = deepLinkUrl;
 
     iosActionElem.style.visibility = 'visible';
-
-  // } else if (isMobile.Android()) {
-  //   setTimeout(function() {
-  //     window.location.replace(googlePlayLink);
-  //   }, 25);
-  //   window.location = deepLinkUrl;
-  // } else {
-  //   alert('Une erreur est survenue');
-  // }
+  } else if (isMobile.Android()) {
+    setTimeout(function() {
+      window.location.replace(googlePlayLink);
+    }, 25);
+    window.location = deepLinkUrl;
+  } else {
+    alert('Une erreur est survenue');
+  }
 
 </script>
 </body>
