add install referrer link

--- a/links.html
+++ b/links.html
@@ -10,6 +10,7 @@
 <body>
 
 <ul>
+		<li>< href="https://pvcp.page.link/?link=https://www.pierreetvacances.com/precheckin/da39a3ee5e6b4b0&apn=com.planet.planetpv.debug">install referrer</a></li>
 		<li>https://www.centerparcs.com
 			<ul>
 				<li>
