--- a/links.html
+++ b/links.html
@@ -10,7 +10,7 @@
 <body>
 
 <ul>
-		<li><a href="https://mypvcp.app.link/?link=https://www.pierreetvacances.com/precheckin/da39a3ee5e6b4b0&apn=com.planet.planetpv.debug">Install Referrer</a></li>
+		<li><a href="https://mypvcp.app.link/maH76iXskR">Mypvcp app link</a></li>
 		<li>https://www.centerparcs.com
 			<ul>
 				<li>
