--- a/links.html
+++ b/links.html
@@ -11,7 +11,7 @@
 
 <ul>
 		<li><a href="https://mypvcp.app.link/maH76iXskR">Mypvcp app link</a></li>
-		<li><a href="https://mypvcp.test-app.link/maH76iXskR">Mypvcp.test app link</a></li>
+		<li><a href="https://mypvcp.test-app.link/7M49i2fukR">Mypvcp.test app link</a></li>
 		<li>https://www.centerparcs.com
 			<ul>
 				<li>
