--- a/links.html
+++ b/links.html
@@ -10,8 +10,8 @@
 <body>
 
 <ul>
-		<li><a href="https://mypvcp.app.link/maH76iXskR">Mypvcp app link</a></li>
-		<li><a href="https://mypvcp.test-app.link/7M49i2fukR">Mypvcp.test app link</a></li>
+		<li><a href="https://mypvcp.app.link/maH76iXskR?bookingId=da39a3ee5e6b4b0">Mypvcp app link</a></li>
+		<li><a href="https://mypvcp.test-app.link/7M49i2fukR?bookingId=da39a3ee5e6b4b0">Mypvcp.test app link</a></li>
 		<li>https://www.centerparcs.com
 			<ul>
 				<li>
