--- a/links.html
+++ b/links.html
@@ -12,6 +12,8 @@
 <ul>
 		<li><a href="https://mypvcp.app.link/maH76iXskR?bookingId=da39a3ee5e6b4b0">Mypvcp app link</a></li>
 		<li><a href="https://mypvcp.test-app.link/7M49i2fukR?bookingId=da39a3ee5e6b4b0">Mypvcp.test app link</a></li>
+		<li><a href="https://mycp-b2csf-dev27.centerparcs.fr/landing-page">https://mycp-b2csf-dev27.centerparcs.fr/</a></li>
+		<li><a href="https://mycp-b2csf-rct21.centerparcs.fr/landing-page">https://mycp-b2csf-rct21.centerparcs.fr/</a></li>
 		<li>https://www.centerparcs.com
 			<ul>
 				<li>
