--- a/links.html
+++ b/links.html
@@ -15,6 +15,8 @@
 		<li><a href="https://mycp-b2csf-dev27.centerparcs.fr/landing-page">https://mycp-b2csf-dev27.centerparcs.fr/</a></li>
 		<li><a href="https://mycp-b2csf-rct21.centerparcs.fr/landing-page">https://mycp-b2csf-rct21.centerparcs.fr/</a></li>
 		<li><a href="https://my.centerparcs.fr/landing-page">https://my.centerparcs.fr/</a></li>
+		<li><a href="https://my.centerparcs.fr/landing-page">https://my.centerparcs.fr/</a></li>
+		<li><a href="https://my.centerparcs.fr/landing-page?app=vn">https://my.centerparcs.fr/?app=vn</a></li>
 		<li>https://www.centerparcs.com
 			<ul>
 				<li>
