--- a/links.html
+++ b/links.html
@@ -17,6 +17,7 @@
 		<li><a href="https://my.centerparcs.fr/landing-page">https://my.centerparcs.fr/</a></li>
 		<li><a href="https://my.centerparcs.fr/landing-page">https://my.centerparcs.fr/</a></li>
 		<li><a href="https://my.centerparcs.fr/landing-page?app=vn">https://my.centerparcs.fr/?app=vn</a></li>
+		<li><a href="itms-apps://itunes.apple.com/fr/app/villages-nature-paris/id1257086187?mt=8">itms-apps://itunes.apple.com/fr/app/villages-nature-paris/id1257086187?mt=8</a></li>
 		<li>https://www.centerparcs.com
 			<ul>
 				<li>
