--- a/redirection.html
+++ b/redirection.html
@@ -6,44 +6,9 @@
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>PlanetCP redirection page</title>
-  <style>
-    html, body {
-        height: 100%;
-        margin: 0;
-    }
-    .buttonsContainer {
-      display: -webkit-box;
-      display: -moz-box;
-      display: -ms-flexbox;
-      display: -webkit-flex;
-      display: flex;
-      height: 100%;
-      width: auto;
-      align-items: center;
-      justify-content: center;
-    }
-    .button {
-      background-color: #ff9c15;
-      margin: 10px;
-      width: 200px;
-      height: 50px;
-      color: white;
-      display: -webkit-box;
-      display: -moz-box;
-      display: -ms-flexbox;
-      display: -webkit-flex;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-    }
-  </style>
 </head>
 <body>
 
-  <div id="ios-action" class="buttonsContainer" style="visibility: hidden">
-    <a id="install-app" class="button" href="">Install App</a>
-    <a id="open-app" class="button" href="">Open App</a>
-  </div>
 
 <script type="application/javascript">
   function loadURLShim() {
@@ -71,6 +36,7 @@
     return results == null ? null : results[1];
   }
 
+  var app = gup('app', url);
 
   var url = new URL(window.location);
   var myCPHref = "https://my.centerparcs.com/";
@@ -83,8 +49,13 @@
   deepLinkUrl += "/landing-page?link=" + link;
   console.log(deepLinkUrl);
 
-  var appStoreLink = "itms-apps://itunes.apple.com/fr/app/planet-center-parcs/id1016903382?mt=8";
+  var appStoreLink = "itms-apps://itunes.apple.com/app/planet-center-parcs/id1016903382?mt=8";
   var googlePlayLink = "http://play.google.com/store/apps/details?id=com.planet.centerparcs"
+
+  if (app == 'vn') {
+    appStoreLink = "itms-apps://itunes.apple.com/fr/app/villages-nature-paris/id1257086187?mt=8";
+    googlePlayLink = "https://play.google.com/store/apps/details?id=com.planet.villagesnature"
+  }
 
   var isMobile = {
     Android: function() {
@@ -101,14 +72,14 @@
   if (!isMobile.any()) {
     window.location.replace(myCPHref);
   } else if (isMobile.iOS()) {
-    var iosActionElem = document.querySelector('#ios-action');
-    var installAppElem = iosActionElem.querySelector('#install-app');
-    var openAppElem = iosActionElem.querySelector('#open-app');
+    setTimeout(function() {
+      window.location = appStoreLink;
+    }, 25);
 
-    installAppElem.href = appStoreLink;
-    openAppElem.href = deepLinkUrl;
-
-    iosActionElem.style.visibility = 'visible';
+    // preventing ios only redirection loop
+    if (redirAlreadyDone == null) {
+      window.location = deepLinkUrl + "&redirDone=1";
+    }
   } else if (isMobile.Android()) {
     setTimeout(function() {
       window.location.replace(googlePlayLink);
