--- a/links.html
+++ b/links.html
@@ -71,6 +71,70 @@
 				</li>
 			</ul>
 		</li>
+		<li>https://my.villagesnature.com
+			<ul>
+				<li>
+					<a href="http://my.villagesnature.com/landing-page">
+						Landing page
+					</a>
+				</li> 
+				<li>
+					<a href="https://my.villagesnature.com/landing-page?link=activities/planning">
+						Planning des activités
+					</a>
+				</li>
+				<li> 
+					<a href="https://my.villagesnature.com/landing-page?link=activities/planning/activity/AQUAMOTORBIKE">
+						Activité Aquamotorbike
+					</a>
+				</li>
+				<li> 
+					<a href="https://my.villagesnature.com/landing-page?link=restaurants/list/">
+						Liste des restaurants
+					</a>
+				</li>
+				<li>
+					<a href="https://my.villagesnature.com/landing-page?link=restaurants/list/restaurant/RES0644LES">
+						 Détail d'une fiche restaurant : Nature et découvertes
+					</a>
+				</li>
+				<li>
+					<a href="https://my.villagesnature.com/landing-page?link=services/list/">
+						Liste des services
+					</a>
+				</li>
+				<li>
+					<a href="https://my.villagesnature.com/landing-page?link=services/list/service/20010">
+						Détail d'une fiche service -> Animaux domestiques
+					</a>
+				</li>
+				<li>
+					<a href="https://my.villagesnature.com/landing-page?link=options/list/">
+						 Liste des options
+					</a>
+				</li>
+				<li>
+					<a href="https://my.villagesnature.com/landing-page?link=options/list/option/VEC">
+						 Détail d'une fiche option spécifique : Voiture électrique
+					</a>
+				</li>
+				<li>
+					<a href="https://my.villagesnature.com/landing-page?link=screen/checkin">
+						Checkin
+					</a>
+				</li>
+				<li>
+					<a href="https://my.villagesnature.com/landing-page?link=screen/cashless">
+						Cashless
+					</a>
+				</li>
+				<li>
+					<a href="https://my.villagesnature.com/landing-page?link=screen/mystay">
+						My Stay
+					</a>
+				</li>
+			</ul>
+		</li>
 		<li>https://cp-mypvcp-rct1.pierreetvacances.com
 			<ul>
 				<li>
